# PP2DB

./: .clang-format  CoreXApp.tag
_script/: _check_env.py  build_cpp.py  clean_install.py
cpp/: CMakeLists.txt
cpp/cmake/: FindMySQL.cmake
cpp/src/: CMakeLists.txt
cpp/src/_include/: db_exports.hpp
cpp/src/common_job/: job.cpp  job.hpp
cpp/src/common_mysql/: mysql_core.cpp  mysql_core.hpp  mysql_core_bind.hpp  mysql_core_stmt.cpp  mysql_core_stmt.hpp
cpp/src/lib/: query.cpp  query.hpp
cpp/src/xexample/: config.cpp  config.hpp  main.cpp
